--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.2.1
-numpy~=1.26.4
-numba==0.60.0
-ccxt==4.4.28
-matplotlib==3.8.3
-scipy==1.14.1
+pandas==2.2.3
+numpy==2.1.3
+numba==0.61.0
+ccxt==4.4.52
+matplotlib==3.10.0
+scipy==1.15.1
